--- a/www/index.html
+++ b/www/index.html
@@ -1,7 +1,9 @@
-<doctype html>
+<!doctype html>
 <html>
-<head><title></title></head>
+<head>
+    <meta charset="UTF-8">
+    <title>☃</title>
+</head>
 <body>
 </body>
 </html>
-
