--- a/www/index.html
+++ b/www/index.html
@@ -5,5 +5,7 @@
     <title>☃</title>
 </head>
 <body>
+    <script src="scripts/react.js"></script>
+    <script src="scripts/JSXTransformer.js"></script>
 </body>
 </html>
