move vendor scripts, add jquery, example reactive app w/ mock ajax data

--- a/www/index.html
+++ b/www/index.html
@@ -5,7 +5,10 @@
     <title>☃</title>
 </head>
 <body>
-    <script src="scripts/react.js"></script>
-    <script src="scripts/JSXTransformer.js"></script>
+    <div id="container"></div>
+    <script src="scripts/vendor/jquery-1.11.1.js"></script>
+    <script src="scripts/vendor/react.js"></script>
+    <script src="scripts/vendor/JSXTransformer.js"></script>
+    <script type="text/jsx" src="scripts/index.js" ></script>
 </body>
 </html>
